# salamander

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat
examples/Basic/: CMakeLists.txt
examples/Basic/src/: main.cpp
examples/bunnymark/: .clangd  CMakeLists.txt
examples/bunnymark/src/: main.cpp
examples/space-invaders/: CMakeLists.txt
examples/space-invaders/src/: main.cpp
examples/triangle/: CMakeLists.txt
examples/triangle/src/: main.cpp
include/: App.h  Base.h  Salamander.h  Window.h
include/audio/: AudioDevice.h  Sound.h
include/core/: App.h  Base.h  Input.h  Window.h
include/graphics/: BatchRenderer.h  Buffer.h  BufferLayout.h  IndexBuffer.h  RenderAPI.h  Renderer2D.h  Shader.h  Texture.h  VertexBuffer.h  gpu.h
include/renderer/: BatchRenderer.h  Buffer.h  Camera.h  RenderAPI.h  Shader.h  Texture.h  VertexBuffer.h
src/: App.cpp  Window.cpp  input.h  main.cpp  types.h
src/audio/: AudioDevice.cpp  Sound.cpp
src/core/: App.cpp  Input.cpp  Window.cpp
src/graphics/: BatchRenderer.cpp  Buffer.cpp  Camera.cpp  RenderAPI.cpp  Renderer2D.cpp  Shader.cpp  Texture.cpp  gpu.cpp
src/renderer/: BatchRenderer.cpp  Buffer.cpp  Camera.cpp  RenderAPI.cpp  Shader.cpp  Texture.cpp
